--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -14,6 +14,7 @@ atlantis	xscreensaver-gl-extra
 attraction	xscreensaver-data-extra
 atunnel	xscreensaver-gl
 barcode	xscreensaver-data-extra
+binaryring	xscreensaver-data
 blaster	xscreensaver-data-extra
 blinkbox	xscreensaver-gl
 blitspin	xscreensaver-data-extra
@@ -32,6 +33,7 @@ carousel	xscreensaver-gl-extra
 ccurve	xscreensaver-data-extra
 celtic	xscreensaver-data-extra
 circuit	xscreensaver-gl
+cityflow	xscreensaver-gl
 cloudlife	xscreensaver-data-extra
 companioncube	xscreensaver-gl-extra
 compass	xscreensaver-data-extra
@@ -74,6 +76,7 @@ fuzzyflakes	xscreensaver-data
 galaxy	xscreensaver-data
 gears	xscreensaver-gl
 geodesic	xscreensaver-gl	High CPU on Radeon
+geodesicgears	xscreensaver-gl
 gflux	xscreensaver-gl
 glblur	xscreensaver-gl
 glcells	xscreensaver-gl
