--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -161,6 +161,7 @@ queens	xscreensaver-gl
 rd-bomb	xscreensaver-data-extra
 ripples	xscreensaver-data
 rocks	xscreensaver-data-extra
+romanboy	xscreensaver-gl
 rorschach	xscreensaver-data-extra
 rotzoomer	xscreensaver-data-extra
 rubik	xscreensaver-gl-extra
@@ -175,6 +176,7 @@ slip	xscreensaver-data-extra
 sonar	xscreensaver-gl
 speedmine	xscreensaver-data-extra
 spheremonics	xscreensaver-gl
+splitflap	xscreensaver-gl
 spotlight	xscreensaver-data-extra
 sproingies	xscreensaver-gl-extra
 squiral	xscreensaver-data-extra
