--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Package: xscreensaver
 Architecture: any
 Depends: ${shlibs:Depends}, xscreensaver-data, ${misc:Depends}
 Breaks: funny-manpages (<< 1.3-1), suidmanager (<< 0.50), xscreensaver-gnome (<< 4.09-2), xscreensaver-nognome (<< 4.09-2), gnome-control-center (<< 1:2)
-Recommends: libjpeg-progs, perl5, miscfiles | wordlist, libgnomeui-0
+Recommends: libjpeg-turbo-progs, perl5, miscfiles | wordlist, libgnomeui-0
 Suggests: xfishtank, xdaliclock, xscreensaver-gl, fortune, www-browser, qcam | streamer, gdm3 | kdm-gdmcompat
 Description: Screensaver daemon and frontend for X11
  XScreenSaver is a modular screen saver and locker for X11,
@@ -51,7 +51,7 @@ Description: Screen saver modules for screensaver frontends
 
 Package: xscreensaver-data-extra
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data (>= 5.04-3), dictionaries-common, libjpeg-progs, netpbm, ${misc:Depends}
+Depends: ${shlibs:Depends}, xscreensaver-data (>= 5.04-3), dictionaries-common, libjpeg-turbo-progs, netpbm, ${misc:Depends}
 Enhances: xscreensaver, gnome-screensaver
 Replaces: xscreensaver (<< 5.04-3)
 Breaks: xscreensaver (<< 5.04-3), gnome-screensaver (<< 2.26), kscreensaver-xsaver (<= 4:4.2.4-1)
