--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -54,7 +54,9 @@ demon	xscreensaver-data-extra
 discrete	xscreensaver-data-extra
 distort	xscreensaver-data
 drift	xscreensaver-data-extra
+dymaxionmap	xscreensaver-gl
 endgame	xscreensaver-gl
+energystream	xscreensaver-gl
 engine	xscreensaver-gl
 epicycle	xscreensaver-data-extra
 eruption	xscreensaver-data-extra
@@ -98,6 +100,7 @@ helix	xscreensaver-data-extra
 hexadrop	xscreensaver-data
 hilbert	xscreensaver-gl-extra
 hopalong	xscreensaver-data-extra
+hydrostat	xscreensaver-gl
 hypertorus	xscreensaver-gl
 hypnowheel	xscreensaver-gl-extra
 ifs	xscreensaver-data-extra
@@ -158,6 +161,7 @@ pyro	xscreensaver-data-extra
 qix	xscreensaver-data-extra
 quasicrystal	xscreensaver-gl
 queens	xscreensaver-gl
+raverhoop	xscreensaver-gl
 rd-bomb	xscreensaver-data-extra
 ripples	xscreensaver-data
 rocks	xscreensaver-data-extra
@@ -198,6 +202,7 @@ triangle	xscreensaver-data-extra
 tronbit	xscreensaver-gl-extra
 truchet	xscreensaver-data-extra
 twang	xscreensaver-data-extra
+unicrud	xscreensaver-gl
 unknownpleasures	xscreensaver-gl-extra	High CPU on Radeon
 vermiculate	xscreensaver-data-extra
 vidwhacker	xscreensaver-data-extra
