Enable all hardening build options
https://wiki.debian.org/Hardening#dpkg-buildflags

--- a/debian/rules
+++ b/debian/rules
@@ -13,6 +13,7 @@
 include /usr/share/quilt/quilt.make
 
 # Includes hardening compile options
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
