--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -43,6 +43,8 @@ crystal	xscreensaver-data-extra
 cube21	xscreensaver-gl-extra
 cubenetic	xscreensaver-gl-extra
 cubestorm	xscreensaver-gl
+cubestack	xscreensaver-gl
+cubetwist	xscreensaver-gl
 cubicgrid	xscreensaver-gl-extra
 cwaves	xscreensaver-data
 cynosure	xscreensaver-data-extra
@@ -51,6 +53,7 @@ decayscreen	xscreensaver-data-extra
 deco	xscreensaver-data
 deluxe	xscreensaver-data-extra
 demon	xscreensaver-data-extra
+discoball	xscreensaver-gl
 discrete	xscreensaver-data-extra
 distort	xscreensaver-data
 drift	xscreensaver-data-extra
@@ -98,6 +101,7 @@ halftone	xscreensaver-data-extra
 halo	xscreensaver-data-extra
 helix	xscreensaver-data-extra
 hexadrop	xscreensaver-data
+hexstrut	xscreensaver-gl
 hilbert	xscreensaver-gl-extra
 hopalong	xscreensaver-data-extra
 hydrostat	xscreensaver-gl
@@ -181,6 +185,7 @@ sonar	xscreensaver-gl
 speedmine	xscreensaver-data-extra
 spheremonics	xscreensaver-gl
 splitflap	xscreensaver-gl
+splodesic	xscreensaver-gl
 spotlight	xscreensaver-data-extra
 sproingies	xscreensaver-gl-extra
 squiral	xscreensaver-data-extra
