--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -211,6 +211,7 @@ unicrud	xscreensaver-gl
 unknownpleasures	xscreensaver-gl-extra	High CPU on Radeon
 vermiculate	xscreensaver-data-extra
 vidwhacker	xscreensaver-data-extra
+vigilance	xscreensaver-gl
 voronoi	xscreensaver-gl
 wander	xscreensaver-data-extra
 webcollage	xscreensaver-screensaver-webcollage
