--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -39,6 +39,7 @@ companioncube	xscreensaver-gl-extra
 compass	xscreensaver-data-extra
 coral	xscreensaver-data-extra
 crackberg	xscreensaver-gl-extra
+crumbler	xscreensaver-gl
 crystal	xscreensaver-data-extra
 cube21	xscreensaver-gl-extra
 cubenetic	xscreensaver-gl-extra
@@ -63,6 +64,7 @@ energystream	xscreensaver-gl
 engine	xscreensaver-gl
 epicycle	xscreensaver-data-extra
 eruption	xscreensaver-data-extra
+esper	xscreensaver-gl
 euler2d	xscreensaver-data-extra
 extrusion	xscreensaver-gl-extra
 fadeplot	xscreensaver-data-extra
@@ -128,6 +130,7 @@ lockward	xscreensaver-gl
 loop	xscreensaver-data-extra
 m6502	xscreensaver-data
 maze	xscreensaver-data-extra
+maze3d	xscreensaver-gl
 memscroller	xscreensaver-data-extra
 menger	xscreensaver-gl-extra
 metaballs	xscreensaver-data
@@ -145,6 +148,7 @@ noof	xscreensaver-gl-extra
 noseguy	xscreensaver-data-extra
 pacman	xscreensaver-data-extra
 pedal	xscreensaver-data-extra
+peepers	xscreensaver-gl
 penetrate	xscreensaver-data-extra
 penrose	xscreensaver-data
 petri	xscreensaver-data-extra
@@ -166,6 +170,7 @@ qix	xscreensaver-data-extra
 quasicrystal	xscreensaver-gl
 queens	xscreensaver-gl
 raverhoop	xscreensaver-gl
+razzledazzle	xscreensaver-gl
 rd-bomb	xscreensaver-data-extra
 ripples	xscreensaver-data
 rocks	xscreensaver-data-extra
