--- a/debian/rules
+++ b/debian/rules
@@ -45,6 +45,8 @@ build-stamp:
 	  mv config.guess config.guess.upstream && \
 	    cp /usr/share/misc/config.guess config.guess
 
+	dh_autoreconf
+
 	# Configure for xscreensaver
 	./configure --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE) \
 		--prefix=/usr \
@@ -83,6 +85,7 @@ clean-patched:
 	  mv driver/XScreenSaver_ad.h.upstream driver/XScreenSaver_ad.h
 	[ ! -f driver/XScreenSaver_Xm_ad.h.upstream ] || \
 	  mv driver/XScreenSaver_Xm_ad.h.upstream driver/XScreenSaver_Xm_ad.h
+	dh_autoreconf_clean
 	dh_clean
 
 binary-indep:	build
