--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,36 @@ Source: xscreensaver
 Section: x11
 Priority: optional
 Maintainer: Tormod Volden <debian.tormod@gmail.com>
-Build-Depends: bc, debhelper (>= 9.0), dh-autoreconf, fortune-mod, libgtk2.0-dev, libpam0g-dev, libgl1-mesa-dev | libgl-dev, libglu1-mesa-dev | xlibmesa-glu-dev | libglu-dev, pkg-config, xutils-dev, libxml2-dev, libglade2-dev, libjpeg-dev, libgle-dev, intltool, autotools-dev, libx11-dev, libxext-dev, libxinerama-dev, libxmu-dev, libxpm-dev, libxrandr-dev, libxss-dev, libxt-dev, libxtst-dev, libxxf86vm-dev, x11proto-core-dev, xbitmaps, quilt, dpkg-dev (>= 1.16.1)
+Build-Depends: autotools-dev,
+               bc,
+               debhelper (>= 9.0),
+               dh-autoreconf,
+               dpkg-dev (>= 1.16.1),
+               fortune-mod,
+               intltool,
+               libgl1-mesa-dev | libgl-dev,
+               libglade2-dev,
+               libgle-dev,
+               libglu1-mesa-dev | xlibmesa-glu-dev | libglu-dev,
+               libgtk2.0-dev,
+               libjpeg-dev,
+               libpam0g-dev,
+               libx11-dev,
+               libxext-dev,
+               libxinerama-dev,
+               libxml2-dev,
+               libxmu-dev,
+               libxpm-dev,
+               libxrandr-dev,
+               libxss-dev,
+               libxt-dev,
+               libxtst-dev,
+               libxxf86vm-dev,
+               pkg-config,
+               quilt,
+               x11proto-core-dev,
+               xbitmaps,
+               xutils-dev
 Standards-Version: 3.9.8
 Homepage: http://www.jwz.org/xscreensaver/
 Vcs-Git: https://anonscm.debian.org/git/collab-maint/xscreensaver.git
@@ -10,9 +39,17 @@ Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/xscreensaver.git/
 
 Package: xscreensaver
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data, ${misc:Depends}
-Recommends: libjpeg-turbo-progs, perl5, miscfiles | wordlist, libgnomeui-0
-Suggests: xfishtank, xdaliclock, xscreensaver-data-extra, xscreensaver-gl, xscreensaver-gl-extra, fortune, www-browser, qcam | streamer, gdm3 | kdm-gdmcompat
+Depends: xscreensaver-data, ${misc:Depends}, ${shlibs:Depends}
+Recommends: libgnomeui-0, libjpeg-turbo-progs, miscfiles | wordlist, perl5
+Suggests: fortune,
+          gdm3 | kdm-gdmcompat,
+          qcam | streamer,
+          www-browser,
+          xdaliclock,
+          xfishtank,
+          xscreensaver-data-extra,
+          xscreensaver-gl,
+          xscreensaver-gl-extra
 Description: Screensaver daemon and frontend for X11
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
@@ -23,13 +60,13 @@ Description: Screensaver daemon and frontend for X11
  you only want to use other screensaver engines, you don't need to
  install this package.
  .
- The graphical display modes are in the xscreensaver-data, 
- xscreensaver-data-extra, xscreensaver-gl and xscreensaver-gl-extra 
+ The graphical display modes are in the xscreensaver-data,
+ xscreensaver-data-extra, xscreensaver-gl and xscreensaver-gl-extra
  packages.
 
 Package: xscreensaver-data
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libwww-perl
+Depends: libwww-perl, ${misc:Depends}, ${shlibs:Depends}
 Suggests: xscreensaver
 Description: Screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
@@ -49,7 +86,12 @@ Description: Screen saver modules for screensaver frontends
 
 Package: xscreensaver-data-extra
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data, dictionaries-common, libjpeg-turbo-progs, netpbm, ${misc:Depends}
+Depends: dictionaries-common,
+         libjpeg-turbo-progs,
+         netpbm,
+         xscreensaver-data,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Extra screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
@@ -79,7 +121,7 @@ Description: Extra screen saver modules for screensaver frontends
 
 Package: xscreensaver-gl
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Suggests: xscreensaver
 Description: GL(Mesa) screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
@@ -108,7 +150,7 @@ Description: GL(Mesa) screen saver modules for screensaver frontends
 
 Package: xscreensaver-gl-extra
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-gl, ${misc:Depends}
+Depends: xscreensaver-gl, ${misc:Depends}, ${shlibs:Depends}
 Description: Extra GL(Mesa) screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
  containing more than 200 screen savers.
@@ -132,18 +174,18 @@ Description: Extra GL(Mesa) screen saver modules for screensaver frontends
 
 Package: xscreensaver-screensaver-webcollage
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data-extra, ${misc:Depends}
+Depends: xscreensaver-data-extra, ${misc:Depends}, ${shlibs:Depends}
 Description: Webcollage screen saver module from XScreenSaver
  This package ships the mode webcollage which displays images from random
  web searches on the Internet.
  .
- WARNING: The Internet being what it is, absolutely anything might show up 
- in the collage of search results including -- quite possibly -- pornography, 
+ WARNING: The Internet being what it is, absolutely anything might show up
+ in the collage of search results including -- quite possibly -- pornography,
  or even nudity. Please act accordingly.
 
 Package: xscreensaver-screensaver-bsod
 Architecture: any
-Depends: ${shlibs:Depends}, xscreensaver-data-extra, ${misc:Depends}
+Depends: xscreensaver-data-extra, ${misc:Depends}, ${shlibs:Depends}
 Description: BSOD screen saver module from XScreenSaver
  This package ships the mode BSOD that shows the popular Blue Screens of Death
  from several OSes including BSD, Windows, Linux, Solaris, Apple and much more.
