Build-Depends on libpng-dev instead of libxpm-dev

--- a/debian/control
+++ b/debian/control
@@ -16,12 +16,12 @@ Build-Depends: autotools-dev,
                libgtk2.0-dev,
                libjpeg-dev,
                libpam0g-dev,
+               libpng-dev,
                libx11-dev,
                libxext-dev,
                libxinerama-dev,
                libxml2-dev,
                libxmu-dev,
-               libxpm-dev,
                libxrandr-dev,
                libxss-dev,
                libxt-dev,
