--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -69,6 +69,7 @@ euler2d	xscreensaver-data-extra
 extrusion	xscreensaver-gl-extra
 fadeplot	xscreensaver-data-extra
 fiberlamp	xscreensaver-data
+filmleader	xscreensaver-data-extra
 fireworkx	xscreensaver-data-extra
 flame	xscreensaver-data-extra
 flipflop	xscreensaver-gl
@@ -88,6 +89,7 @@ gflux	xscreensaver-gl
 glblur	xscreensaver-gl
 glcells	xscreensaver-gl
 gleidescope	xscreensaver-gl
+glitchpeg	xscreensaver-data-extra
 glhanoi	xscreensaver-gl-extra
 glknots	xscreensaver-gl
 glmatrix	xscreensaver-gl
@@ -215,6 +217,7 @@ twang	xscreensaver-data-extra
 unicrud	xscreensaver-gl
 unknownpleasures	xscreensaver-gl-extra	High CPU on Radeon
 vermiculate	xscreensaver-data-extra
+vfeedback	xscreensaver-data-extra
 vidwhacker	xscreensaver-data-extra
 vigilance	xscreensaver-gl
 voronoi	xscreensaver-gl
