Add new hacks to packages

--- a/debian/control
+++ b/debian/control
@@ -138,7 +138,7 @@ Description: GL(Mesa) screen saver modules for screensaver frontends
  dymaxionmap, endgame, energystream, engine, esper, flipflop,
  flipscreen3d, flyingtoasters, gears, geodesic, geodesicgears, gflux,
  glblur, glcells, gleidescope, glknots, glmatrix, glschool,
- glslideshow, glsnake, gltext, hexstrut, hydrostat, hypertorus,
+ glslideshow, glsnake, gltext, handsy, hexstrut, hydrostat, hypertorus,
  jigglypuff, kaleidocycle, lavalite, lockward, maze3d, mirrorblob,
  moebius, moebiusgears, molecule, morph3d, peepers, pipes, polyhedra,
  polytopes, projectiveplane, pulsar, quasicrystal, queens, raverhoop,
