--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -103,6 +103,7 @@ grav	xscreensaver-data-extra
 greynetic	xscreensaver-data-extra
 halftone	xscreensaver-data-extra
 halo	xscreensaver-data-extra
+handsy	xscreensaver-gl
 helix	xscreensaver-data-extra
 hexadrop	xscreensaver-data
 hexstrut	xscreensaver-gl
