--- a/debian/split-hacks.config
+++ b/debian/split-hacks.config
@@ -52,6 +52,7 @@ cynosure	xscreensaver-data-extra
 dangerball	xscreensaver-gl-extra
 decayscreen	xscreensaver-data-extra
 deco	xscreensaver-data
+deepstars	xscreensaver-gl-extra
 deluxe	xscreensaver-data-extra
 demon	xscreensaver-data-extra
 discoball	xscreensaver-gl
@@ -100,6 +101,7 @@ glsnake	xscreensaver-gl
 gltext	xscreensaver-gl
 goop	xscreensaver-data-extra
 grav	xscreensaver-data-extra
+gravitywell	xscreensaver-gl-extra
 greynetic	xscreensaver-data-extra
 halftone	xscreensaver-data-extra
 halo	xscreensaver-data-extra
