--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: autotools-dev,
                dpkg-dev (>= 1.16.1),
                fortune-mod,
                intltool,
+               libcap-dev,
                libgl1-mesa-dev | libgl-dev,
                libglade2-dev,
                libgle-dev,
