--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: autotools-dev,
                dpkg-dev (>= 1.16.1),
                fortune-mod,
                intltool,
-               libcap-dev,
+               libcap2-dev,
                libgl1-mesa-dev | libgl-dev,
                libglade2-dev,
                libgle-dev,
@@ -123,7 +123,7 @@ Description: Extra screen saver modules for screensaver frontends
 
 Package: xscreensaver-gl
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: libcap2-bin, ${misc:Depends}, ${shlibs:Depends}
 Suggests: xscreensaver
 Description: GL(Mesa) screen saver modules for screensaver frontends
  XScreenSaver is a modular screen saver and locker for X11,
