Add libsystemd-dev dependency to debian/control

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: autotools-dev,
                libjpeg-dev,
                libpam0g-dev,
                libpng-dev,
+               libsystemd-dev,
                libx11-dev,
                libxext-dev,
                libxinerama-dev,
